--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,7 @@ hs_err_pid*
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+/.idea/.name
+/.idea/compiler.xml
+/.idea/misc.xml
+/.idea/vcs.xml
